<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:paddingStart="20dp"
        android:paddingEnd="30dp">
        <ImageView
            android:id="@+id/exam_regist_backicon"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_left"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exam_rg_title"
            android:gravity="center_vertical|end"
            android:textSize="27sp"
            android:fontFamily="@font/mplus_black"
            android:textColor="@color/textcolor_1"
            android:textFontWeight="800"
            android:paddingBottom="5dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/appointment_background"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_rg_name"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_light"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exam_regist_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/border_outline"
            android:drawableLeft="@drawable/ic_exam_user"
            android:drawablePadding="20dp"
            android:hint="@string/exam_rg_namehint"
            android:paddingStart="20dp"
            android:singleLine="true"
            android:textColorHint="@color/textcolor_1"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_rg_email"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_light"
            android:textSize="16sp"
            android:layout_marginTop="15dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exam_regist_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/border_outline"
            android:drawableLeft="@drawable/ic_exam_mail"
            android:drawablePadding="20dp"
            android:hint="@string/exam_rg_emailhint"
            android:paddingStart="20dp"
            android:textColorHint="@color/textcolor_1"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_rg_purpose"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_light"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>
        <Spinner
            android:id="@+id/exam_regist_purpose"
            android:layout_width="match_parent"
            android:background="@drawable/border_outline_spinner"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:paddingStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_rg_course"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_light"
            android:textSize="16sp"
            android:layout_marginTop="15dp"/>
        <Spinner
            android:id="@+id/exam_regist_course"
            android:layout_width="match_parent"
            android:background="@drawable/border_outline_spinner"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:paddingStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_rg_time"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_light"
            android:textSize="16sp"
            android:layout_marginTop="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exam_regist_datepick"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/border_outline"
                android:drawableLeft="@drawable/ic_exam_calendar"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:singleLine="true"
                android:text="@string/exam_rg_date"
                android:textColor="@color/exam_rg_icon_2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/exam_regist_timepick"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/border_outline"
                android:drawableLeft="@drawable/ic_exam_clock"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:singleLine="true"
                android:text="@string/exam_rg_hour"
                android:textColor="@color/exam_rg_icon_2"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/exam_regist_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/intro_round_corner"
            android:backgroundTint="@color/sunrise_1"
            android:drawableLeft="@drawable/ic_exam_check"
            android:drawablePadding="-5dp"
            android:fontFamily="@font/roboto_bold"
            android:paddingStart="12dp"
            android:text="@string/exam_rg_done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>