<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="125dp"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="22dp"
    android:paddingRight="22dp"
    android:background="@color/intro_teacher"
    android:id="@+id/intro_teacher_itemlayout">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/intro_teacher_avatar"
            android:layout_width="95dp"
            android:layout_height="105dp"
            android:background="@drawable/teacher_placeholder_even"
            android:scaleType="fitXY" />

    </FrameLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/intro_teacher_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mplus_bold"
                android:text="@string/intro_teacher_t_name"
                android:textSize="16sp"
                android:textColor="@color/intro_text_2"/>

            <TextView
                android:id="@+id/intro_teacher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_teacher_d_name"
                android:fontFamily="@font/mplus_bold"
                android:textSize="16sp"
                android:textColor="@color/intro_text_2"/>
        </LinearLayout>
        <TextView
            android:id="@+id/intro_teacher_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_teacher_t_title"
            android:fontFamily="@font/mplus_regular"
            android:textSize="12sp"
            android:textColor="@color/intro_teacher_text"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_teacher_t_field"
                android:fontFamily="@font/mplus_bold"
                android:textSize="12sp"
                android:textColor="@color/intro_text_2"/>
            <TextView
                android:id="@+id/intro_teacher_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_teacher_d_field"
                android:fontFamily="@font/mplus_bold"
                android:textSize="12sp"
                android:textColor="@color/intro_text_2"/>
        </LinearLayout>
        <TextView
            android:id="@+id/intro_teacher_content"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/intro_teacher_d_content"
            android:fontFamily="@font/mplus_regular"
            android:textSize="12sp"
            android:layout_marginTop="6dp"
            android:textColor="@color/intro_text_2"/>
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>