<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <ImageView
            android:id="@+id/qa_create_closeicon"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_times" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/mplus_black"
            android:gravity="center_vertical|end"
            android:text="@string/qa_create_title"
            android:textColor="@color/sunrise_3"
            android:textFontWeight="800"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/qa_create_theme"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/qa_create_main_subject"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/qa_create_subtheme1"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/qa_create_sub_subject_a"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/qa_create_subtheme2"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/qa_create_sub_subject_b"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/qa_create_q"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/qa_create_question"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="top"
            android:hint="@string/qa_create_qhint"
            android:inputType="text|textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/qa_create_a"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/qa_create_answer"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="top"
            android:hint="@string/qa_create_ahint"
            android:inputType="text|textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/qa_create_post_btn"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@drawable/intro_round_corner"
            android:backgroundTint="@color/sunrise_3"
            android:drawablePadding="-70dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/qa_create_add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/qa_create_update_btn"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@drawable/intro_round_corner"
            android:backgroundTint="@color/sunrise_3"
            android:drawablePadding="-70dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Cập nhập"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>